--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -1,5 +1,14 @@
 .navbar {
   width: 100%;
-  height: 50px;
+  height: var(--navbar-height);
   background-color: var(--inverted-bg-color);
+  display: flex;
+  align-items: center;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  margin-left: auto;
 }
