--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -14,4 +14,6 @@
   --sidebar-width-collapsed: 80px;
   --modal-z-index: 10;
   --overlay-color: rgba(0 0 0 / 60%);
+  --color-red-light: red;
+  --color-red-dark: rgb(200 1 1);
 }
