--- a/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
+++ b/src/entities/Profile/ui/ProfileCard/ProfileCard.module.scss
@@ -14,3 +14,13 @@
   justify-content: center;
   height: 300px;
 }
+
+.avatarWrapper {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+
+.editing {
+  border: var(--inverted-primary-color) 2px solid;
+}
