--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -21,5 +21,7 @@ body {
 
 .page-wrapper {
   flex-grow: 1;
-  padding: 20px;
+  height: calc(100vh - 50px);
+  padding: 20px 20px 20px 45px;
+  overflow-y: auto;
 }
