add article blocks components

--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -13,3 +13,13 @@
 .skeleton {
   margin-top: 20px;
 }
+
+.avatarWrapper {
+  text-align: center;
+}
+
+.articleInfo {
+  display: flex;
+  align-items: canter;
+  gap: 5px;
+}
